--- a/index.html
+++ b/index.html
@@ -3,51 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Free AI-powered image tools: Advanced Image Describer for automatic alt text, AI Cutout for background removal, and Turn Images into Unicode converter. No registration required.">
-    <meta name="keywords" content="AI image describer, image description generator, AI cutout tool, background remover, remove background online, image to unicode converter, turn image into unicode, ASCII art generator, free image tools, online image utilities">
-    <title>CusImage - AI Image Describer, Cutout & Unicode Converter | Free Online Tools</title>
+    <meta name="description" content="Create stunning pixel art with our free online editor, convert images to pixel art or unicode, and use AI tools like background remover. No download or registration required.">
+    <meta name="keywords" content="pixel art editor, online pixel art maker, image to pixel art, pixel art converter, image to unicode, ascii art generator, ai background remover, free image tools, cusimage">
+    <title>CusImage - Free Online Pixel Art Editor, Converter & AI Image Tools</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
-    <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
-    <script src="favicon.js" defer></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script>(function(){var h=location.hostname;var isLocal=/^(localhost|127\.0\.0\.1)$/.test(h);if(!isLocal){var s=document.createElement('script');s.defer=true;s.src='/_vercel/insights/script.js';document.head.appendChild(s);}})();</script>
-    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"CusImage","url":"https://www.cusimage.com","logo":"https://www.cusimage.com/logo.png"}</script>
-    <script>
-      (function(){
-        var host = location.hostname || '';
-        var isLocal = host === 'localhost' || host === '127.0.0.1' || /\.vercel\.dev$/.test(host);
-        if (isLocal) return;
-        var s = document.createElement('script');
-        s.async = true;
-        s.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853';
-        s.crossOrigin = 'anonymous';
-        document.head.appendChild(s);
-      })();
-    </script>
+    <link rel="icon" href="/favicon.svg?v=3" type="image/svg+xml">
+    <link rel="shortcut icon" href="/favicon.svg?v=3" type="image/svg+xml">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <script>(function(){var h=location.hostname||'';var isLocal=/^(localhost|127\.0\.0\.1)$/.test(h);if(!isLocal){var s=document.createElement('script');s.defer=true;s.src='/_vercel/insights/script.js';document.head.appendChild(s);}})();</script>
+    <script>(function(){var h=location.hostname||'';var isProd=h==='www.cusimage.com'||h==='cusimage.com';if(!isProd){return;}var si=document.createElement('script');si.defer=true;si.src='/_vercel/speed-insights/script.js';document.head.appendChild(si);})();</script>
+    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"CusImage","url":"https://www.cusimage.com","logo":"https://www.cusimage.com/logo.svg"}</script>
 </head>
 <body>
     <header class="header">
         <div class="container">
             <div class="brand">
-                <div class="logo"><img src="/logo.png" alt="CusImage"></div>
+                <img src="/logo.svg" alt="CusImage Logo" class="logo-icon">
                 <h1 class="title">CusImage</h1>
-                <p class="subtitle">Advanced Image Describer, AI Cutout & Unicode Converter Solutions</p>
             </div>
             <div class="nav-dropdown">
-                <button class="nav-toggle" aria-haspopup="true" aria-expanded="false" aria-controls="main-nav">Menu</button>
-                <nav class="nav" id="main-nav" aria-label="Main navigation">
-                    <ul class="nav-menu">
-                        <li><a href="/image-describer" class="nav-link">Image Describer</a></li>
-                        <li><a href="/turn-images-into-unicode" class="nav-link">Turn Images into Unicode</a></li>
-                        <li><a href="/images-for-fb-cover" class="nav-link">Fb Covers</a></li>
-                        <li><a href="/400x400-black-image" class="nav-link">400x400 Black Image</a></li>
-                        <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
-                        <li><a href="/ambigram-generator" class="nav-link">Ambigram Generator</a></li>
-                    </ul>
-                </nav>
+                <a href="/pixel-art-ideas" class="nav-link">Pixel Art Ideas</a>
+                <div class="dropdown-container">
+                    <span class="nav-link dropdown-trigger">Tools ▼</span>
+                    <div class="dropdown-content">
+                        <a href="/pixel-editor" class="dropdown-item">Pixel Editor</a>
+                        <a href="/turn-image-into-pixel-art" class="dropdown-item">Image to Pixel</a>
+                        <a href="/turn-images-into-unicode" class="dropdown-item">Unicode Art</a>
+                    </div>
+                </div>
+                <div id="user-widget-container" style="display: inline-block; margin-left: 20px;"></div>
             </div>
         </div>
     </header>
@@ -55,109 +40,34 @@
     <main class="main">
         <div class="container">
             <section class="hero">
-                <h2 class="hero-title">AI-Powered Image Describer, Cutout & Unicode Tools</h2>
-                <p class="hero-description">Transform your images with our advanced AI image describer for automatic descriptions, smart cutout for background removal, and unicode converter for text art creation</p>
+                <h2 class="hero-title">FREE ONLINE PIXEL EDITOR</h2>
+                <p class="hero-description">Create stunning pixel art with our easy-to-use editor. No download required.</p>
+                <div style="margin-top: 2rem;">
+                    <a href="/pixel-editor" class="btn-primary">START DESIGNING</a>
+                </div>
             </section>
 
-
-            <div class="features-grid">
-                <a href="/image-describer" class="feature-card">
-                    <div class="card-icon">
-                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
-                            <rect x="3" y="3" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.5"/>
-                            <path d="M7 9h6M7 12h10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                            <path d="M6 20l4-4 3 3 5-5 3 3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                        </svg>
-                    </div>
-                    <h3 class="card-title">AI Image Describer</h3>
-                    <p class="card-description">Advanced image describer tool that generates accurate, natural captions for any image with multilingual AI-powered description capabilities</p>
-                    <span class="card-cta">Get Started →</span>
-                </a>
-
-
-                <a href="/turn-images-into-unicode" class="feature-card">
-                    <div class="card-icon">
-                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
-                            <rect x="3" y="3" width="8" height="8" rx="1.5" stroke="currentColor" stroke-width="1.5"/>
-                            <rect x="13" y="3" width="8" height="8" rx="1.5" stroke="currentColor" stroke-width="1.5"/>
-                            <rect x="3" y="13" width="8" height="8" rx="1.5" stroke="currentColor" stroke-width="1.5"/>
-                            <rect x="13" y="13" width="8" height="8" rx="1.5" stroke="currentColor" stroke-width="1.5"/>
-                        </svg>
-                    </div>
-                    <h3 class="card-title">Turn Images into Unicode</h3>
-                    <p class="card-description">Convert images into Unicode art compatible with terminals and web</p>
-                    <span class="card-cta">Get Started →</span>
-                </a>
-
-                <a href="/images-for-fb-cover" class="feature-card">
-                    <div class="card-icon">
-                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
-                            <rect x="3" y="4" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.5"/>
-                            <path d="M5 16h14" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                            <path d="M7 12l3-3 3 3 4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                        </svg>
-                    </div>
-                    <h3 class="card-title">Fb Covers</h3>
-                    <p class="card-description">Images for FB cover pulled from Feishu Bitable and shown in a responsive gallery</p>
-                    <span class="card-cta">Get Started →</span>
-                </a>
-
-                <a href="/400x400-black-image" class="feature-card">
-                    <div class="card-icon">
-                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
-                            <rect x="3" y="3" width="18" height="18" rx="2" fill="#000000" stroke="currentColor" stroke-width="1.5"/>
-                        </svg>
-                    </div>
-                    <h3 class="card-title">400x400 Black Image</h3>
-                    <p class="card-description">Generate and download a 400×400 pure black image in PNG, JPG, or SVG formats</p>
-                    <span class="card-cta">Get Started →</span>
-                </a>
-
-                <a href="/blank-image" class="feature-card">
-                    <div class="card-icon">
-                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
-                            <rect x="3" y="3" width="18" height="18" rx="2" stroke="currentColor" stroke-width="1.5"/>
-                            <path d="M7 9h10M7 12h10M7 15h10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                        </svg>
-                    </div>
-                    <h3 class="card-title">Blank Image</h3>
-                    <p class="card-description">Create printable blank pages with custom grids, lines, templates, units and DPI; export PNG/JPG/SVG</p>
-                    <span class="card-cta">Get Started →</span>
-                </a>
-                <a href="/ambigram-generator" class="feature-card">
-                    <div class="card-icon">
-                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
-                            <path d="M12 2L12 22M2 12L22 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                            <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5"/>
-                        </svg>
-                    </div>
-                    <h3 class="card-title">Ambigram Generator</h3>
-                    <p class="card-description">Create reversible symmetric typography and download SVG/PNG</p>
-                    <span class="card-cta">Get Started →</span>
-                </a>
+            <h3 style="text-align: center; margin-bottom: 2rem; color: var(--pixel-accent);">PIXEL ART GALLERY</h3>
+            
+            <div id="home-marquee-container" class="marquee-container">
+                <!-- Marquee tracks will be injected here by JS -->
             </div>
+
+            <!-- Legacy container kept but hidden via CSS -->
+            <div class="pixel-grid-container" style="display:none;"></div>
+
+            <div style="text-align: center; margin: 4rem 0;">
+                <h3>Need more inspiration?</h3>
+                <p style="margin-bottom: 2rem;">Explore our curated collection of pixel art ideas.</p>
+                <a href="/pixel-art-ideas" class="btn-primary" style="font-size: 1.5rem; padding: 1rem 2rem;">VIEW MORE IDEAS</a>
+            </div>
+
         </div>
     </main>
 
     <cus-footer></cus-footer>
     <script src="/footer.js" defer></script>
-    <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      var toggle = document.querySelector('.nav-toggle');
-      var dropdown = toggle && toggle.parentElement;
-      var nav = dropdown && dropdown.querySelector('.nav');
-      if (!toggle || !dropdown || !nav) return;
-      toggle.addEventListener('click', function() {
-        var open = dropdown.classList.toggle('open');
-        toggle.setAttribute('aria-expanded', open ? 'true' : 'false');
-      });
-      document.addEventListener('click', function(e) {
-        if (!dropdown.contains(e.target)) {
-          dropdown.classList.remove('open');
-          toggle.setAttribute('aria-expanded', 'false');
-        }
-      });
-    });
-    </script>
+    <script src="/user-widget.js" defer></script>
+    <script src="/home-gallery.js" defer></script>
 </body>
 </html>
