--- a/turn-images-into-unicode.html
+++ b/turn-images-into-unicode.html
@@ -3,39 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Turn images into unicode with our free online converter. Transform any picture into beautiful ASCII art and unicode text characters for terminal displays, social media, and creative projects.">
-    <meta name="keywords" content="turn images into unicode, image to unicode converter, ASCII art generator, text art converter, image to text, unicode art, ASCII art creator, free image to unicode">
+    <meta name="description" content="Convert any image into Unicode text art and ASCII characters. Copy and paste text art for social media, comments, and coding projects. Free online converter.">
+    <meta name="keywords" content="image to unicode, image to ascii, ascii art generator, text art converter, image to text, unicode art maker, turn images into unicode">
     <meta name="robots" content="index, follow">
-    <title>Turn Images into Unicode - Free Online Converter & ASCII Art Generator | CusImage</title>
+    <title>Image to Unicode & ASCII Art Converter - Text Art Generator | CusImage</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
-    <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml">
+    <link rel="icon" href="/favicon.svg?v=3" type="image/svg+xml">
+    <link rel="shortcut icon" href="/favicon.svg?v=3" type="image/svg+xml">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://www.cusimage.com/turn-images-into-unicode">
     <link rel="stylesheet" href="unicode.css">
-    <script>
-      (function(){
-        var h = location.hostname; var isLocal = /^(localhost|127\.0\.0\.1)$/.test(h);
-        if (!isLocal) {
-          var s = document.createElement('script'); s.defer = true; s.src = '/favicon.js';
-          s.onerror = function(){}; document.head.appendChild(s);
-        }
-      })();
-    </script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="alternate" hreflang="en" href="https://www.cusimage.com/turn-images-into-unicode">
-    <meta property="og:title" content="Turn Images into Unicode – Free Converter & ASCII Art Generator">
-    <meta property="og:description" content="Convert any image into Unicode art and ASCII characters. Perfect for terminals, social posts, and creative projects.">
+    <meta property="og:title" content="Image to Unicode & ASCII Art Converter - Text Art Generator">
+    <meta property="og:description" content="Convert any image into Unicode text art and ASCII characters. Copy and paste text art for social media, comments, and coding projects. Free online converter.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.cusimage.com/turn-images-into-unicode">
-    <meta property="og:image" content="https://www.cusimage.com/logo.png">
+    <meta property="og:image" content="https://www.cusimage.com/logo.svg">
     <meta property="og:locale" content="en_US">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Turn Images into Unicode – Free Converter & ASCII Art Generator">
-    <meta name="twitter:description" content="Convert any image into Unicode art and ASCII characters. Perfect for terminals, social posts, and creative projects.">
-    <meta name="twitter:image" content="https://www.cusimage.com/logo.png">
-    <script>(function(){var h=location.hostname;var isLocal=/^(localhost|127\.0\.0\.1)$/.test(h);if(!isLocal){var s=document.createElement('script');s.defer=true;s.src='/_vercel/insights/script.js';document.head.appendChild(s);}})();</script>
+    <meta name="twitter:title" content="Image to Unicode & ASCII Art Converter - Text Art Generator">
+    <meta name="twitter:description" content="Convert any image into Unicode text art and ASCII characters. Copy and paste text art for social media, comments, and coding projects. Free online converter.">
+    <meta name="twitter:image" content="https://www.cusimage.com/logo.svg">
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"WebPage","name":"Turn Images into Unicode","url":"https://www.cusimage.com/turn-images-into-unicode","description":"Free online converter to turn images into Unicode art and ASCII text characters.","inLanguage":"en"}
     </script>
@@ -49,41 +38,30 @@
       {"@type":"Question","name":"What output formats are supported?","acceptedAnswer":{"@type":"Answer","text":"You can copy plain text output and download it as a .txt file."}}
     ]}
     </script>
-    <script>
-      (function(){
-        var host = location.hostname || '';
-        var isLocal = host === 'localhost' || host === '127.0.0.1' || /\.vercel\.dev$/.test(host);
-        if (isLocal) return;
-        var s = document.createElement('script');
-        s.async = true;
-        s.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2211656389763853';
-        s.crossOrigin = 'anonymous';
-        document.head.appendChild(s);
-      })();
-    </script>
+    <script>(function(){var h=location.hostname||'';var isLocal=/^(localhost|127\.0\.0\.1)$/.test(h);if(!isLocal){var s=document.createElement('script');s.defer=true;s.src='/_vercel/insights/script.js';document.head.appendChild(s);}})();</script>
+    <script>(function(){var h=location.hostname||'';var isProd=h==='www.cusimage.com'||h==='cusimage.com';if(!isProd){return;}var si=document.createElement('script');si.defer=true;si.src='/_vercel/speed-insights/script.js';document.head.appendChild(si);})();</script>
 </head>
 <body>
     <header class="header">
         <div class="container">
             <div class="brand">
-                <div class="logo"><img src="/logo.png" alt="CusImage"></div>
-                <h1 class="title">CusImage</h1>
-                <p class="subtitle">Professional Turn Images into Unicode & ASCII Art Conversion Solutions</p>
+                <a href="/" style="text-decoration: none; display: flex; align-items: center;">
+                    <img src="/logo.svg" alt="CusImage Logo" class="logo-icon">
+                    <h1 class="title">CusImage</h1>
+                </a>
+                <p class="subtitle" style="font-family: 'VT323'; color: var(--pixel-secondary); margin-left: 10px;">Turn Images into Unicode & ASCII Art</p>
             </div>
             <div class="nav-dropdown">
-                <button class="nav-toggle" aria-haspopup="true" aria-expanded="false" aria-controls="main-nav">Menu</button>
-                <nav class="nav" id="main-nav" aria-label="Main navigation">
-                    <ul class="nav-menu">
-                        <li><a href="/" class="nav-link">Home</a></li>
-                        <li><a href="/image-describer" class="nav-link">Image Describer</a></li>
-                        <li><a href="/turn-images-into-unicode" class="nav-link active">Turn Images into Unicode</a></li>
-            <li><a href="/images-for-fb-cover" class="nav-link">Fb Covers</a></li>
-            <li><a href="/400x400-black-image" class="nav-link">400x400 Black Image</a></li>
-            <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
-            <li><a href="/blank-image" class="nav-link">Blank Image</a></li>
-            <li><a href="/ambigram-generator" class="nav-link">Ambigram Generator</a></li>
-                    </ul>
-                </nav>
+                <a href="/pixel-art-ideas" class="nav-link">Pixel Art Ideas</a>
+                <div class="dropdown-container">
+                    <span class="nav-link dropdown-trigger">Tools ▼</span>
+                    <div class="dropdown-content">
+                        <a href="/pixel-editor" class="dropdown-item">Pixel Editor</a>
+                        <a href="/turn-image-into-pixel-art" class="dropdown-item">Image to Pixel</a>
+                        <a href="/turn-images-into-unicode" class="dropdown-item">Unicode Art</a>
+                    </div>
+                </div>
+                <div id="user-widget-container" style="display: inline-block; margin-left: 20px;"></div>
             </div>
         </div>
     </header>
@@ -123,7 +101,18 @@
                                         <div class="output-actions">
                                             <button id="previewBtn" class="action-btn small">Preview</button>
                                             <button id="downloadBtn" class="action-btn small">Download</button>
+                                            <button id="reuploadBtn" class="action-btn small">Reupload</button>
                                         </div>
+                                    </div>
+                                    <div id="unicodePlaceholder" class="unicode-placeholder">
+                                        <div class="placeholder-icon">
+                                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none">
+                                                <rect x="3" y="4" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.5"/>
+                                                <path d="M8 13l3-3 5 5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                                <circle cx="8" cy="9" r="1.5" fill="currentColor"/>
+                                            </svg>
+                                        </div>
+                                        <p>Awaiting conversion. Click “Convert to Unicode”.</p>
                                     </div>
                                     <pre id="unicodeOutput" class="unicode-output"></pre>
                                 </div>
@@ -140,8 +129,8 @@
                     </div>
                     <div class="control-group">
                         <label class="control-label">Output Width</label>
-                        <input type="range" id="widthSlider" min="40" max="200" step="10" value="80" class="slider">
-                        <span class="control-value" id="widthValue">80</span>
+                        <input type="range" id="widthSlider" min="40" max="200" step="10" value="150" class="slider">
+                        <span class="control-value" id="widthValue">150</span>
                     </div>
                     <div class="control-group">
                         <label class="control-label">Character Set</label>
@@ -225,21 +214,45 @@
         </div>
     </div>
 
+    <div id="custom-modal" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">NOTICE</h3>
+            </div>
+            <div class="modal-body">
+                <p id="modal-message"></p>
+            </div>
+            <div class="modal-footer">
+                <button id="modal-cancel" class="modal-btn cancel">CANCEL</button>
+                <button id="modal-confirm" class="modal-btn confirm">OK</button>
+            </div>
+        </div>
+    </div>
     <script src="unicode.js"></script>
+    <script src="/user-widget.js" defer></script>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
       var toggle = document.querySelector('.nav-toggle');
       var dropdown = toggle && toggle.parentElement;
       var nav = dropdown && dropdown.querySelector('.nav');
-      if (!toggle || !dropdown || !nav) return;
-      toggle.addEventListener('click', function() {
-        var open = dropdown.classList.toggle('open');
-        toggle.setAttribute('aria-expanded', open ? 'true' : 'false');
-      });
-      document.addEventListener('click', function(e) {
-        if (!dropdown.contains(e.target)) {
-          dropdown.classList.remove('open');
-          toggle.setAttribute('aria-expanded', 'false');
+      if (toggle && dropdown && nav) {
+        toggle.addEventListener('click', function(e) {
+          e.preventDefault();
+          var open = dropdown.classList.toggle('open');
+          toggle.setAttribute('aria-expanded', open ? 'true' : 'false');
+        });
+      }
+      var brand = document.querySelector('.brand');
+      if (brand) {
+        brand.setAttribute('role','link');
+        brand.setAttribute('tabindex','0');
+        brand.addEventListener('click', function(){ location.href = '/'; });
+        brand.addEventListener('keypress', function(e){ if (e.key === 'Enter' || e.keyCode === 13) location.href = '/'; });
+      }
+        document.addEventListener('click', function(e) {
+          if (!dropdown.contains(e.target)) {
+            dropdown.classList.remove('open');
+            toggle.setAttribute('aria-expanded', 'false');
         }
       });
     });
